SpiderData/cnblogs/Clean/07105.txt
Python 报错！

$ python count\ line.py

File "count line.py", line 35

print 123

^

SyntaxError: Missing parentheses in call to 'print'. Did you mean print(123)?

发现是因为python2.X版本与python3.X版本输出方式不同造成的在python3.X的，输入内容时都要带上括号python()，而在2.X中直接输出就没有问题

将print 123 改为print（123）即可

文章来源：刘俊涛的博客
欢迎关注公众号、留言、评论，一起学习。

若有帮助到您，欢迎点击推荐，您的支持是对我坚持最好的肯定(*^_^*)

